// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bookmarks actionCreators setBookmarkLocations(chapter_id) matches snapshot 1`] = `
Object {
  "payload": Object {
    "chapter": 1,
  },
  "type": "SET_BOOKMARK_LOCATIONS",
}
`;

exports[`Bookmarks actionCreators setBookmarkOffered(true) matches snapshot 1`] = `
Object {
  "payload": Object {
    "prompt_shown": true,
  },
  "type": "SET_BOOKMARK_OFFERED",
}
`;
